# gporca

./: CMakeLists.txt  Makefile
concourse/: pipeline.yml
data/dxl/minidump/: AggTopOfSetRetFuncsAndUnusedScalar.mdp  AggTopOfSingleSetRetFuncs.mdp  ArrayIN.mdp  Correlated-LASJ-With-Outer-Const.mdp  DynamicIndexScan-Heterogenous-UnsupportedPredicate.mdp  EquivClassesLimit.mdp  ExtractPredicateFromDisj.mdp  IndexNLJoin_Cast_NoMotion.mdp  Insert-AO-Partitioned-NoSort.mdp  Insert-AO-Partitioned-SortDisabled.mdp  Insert-AO-Partitioned.mdp  Insert-AO.mdp  Insert-Parquet-Partitioned-SortDisabled.mdp  Insert-Parquet-Partitioned.mdp  Insert-Parquet.mdp  Insert-Row-Oriented-Partitioned-SortDisabled.mdp  Insert-Row-Oriented.mdp  Join-Dist-Key-No-Motion.mdp  LOJ-IndexApply-Negative-NonDistKey.mdp  MultiLevelSubqueryWithSetRetFuncs.mdp  MultiLevelSubqueryWithSetRetFuncsAndScalarFuncs.mdp  PartTbl-ArrayCast.mdp  PartTbl-ArrayCoerce.mdp  PartTbl-DPE-Correlated-NLOuter.mdp  PartTbl-EquivClassLimitFilter.mdp  PartTbl-JoinOverExcept.mdp  PartTbl-JoinOverIntersect.mdp  PartTbl-JoinOverUnion-1.mdp  PartTbl-JoinOverUnion-2.mdp  PartTbl-List-DPE-Int-Predicates.mdp  PartTbl-List-DPE-Varchar-Predicates.mdp  PartTbl-List-IsNull.mdp  PartTbl-MultiWayJoin.mdp  PartTbl-MultiWayJoinWithDPE.mdp  PartTbl-Nestloop-DTS-No-CrossJoinLevel.mdp  PartTbl-Relabel-Range.mdp  PushGbBelowJoin-NegativeCase.mdp  Remove-Distinct-From-Subquery.mdp  RightJoin-NonDistKey-EquivClass.mdp  Select-Proj-OuterJoin.mdp  (+5 more)
data/dxl/minidump/CPhysicalParallelUnionAllTest/: ParallelUnion-Select.mdp
data/dxl/minidump/CPruneColumnsTest/: AggTopOfMultipleSetRetFuncs.mdp  AggTopOfMultipleSetRetFuncsAndUnusedScalar.mdp  AggTopOfSetRefFuncsOnTopTbl.mdp  AggTopOfSetRetFuncsAndUnusedScalar.mdp  AllColsUsed.mdp  MultiLevelSubqueryWithSetRetFuncs.mdp  MultiLevelSubqueryWithSetRetFuncsAndScalarFuncs.mdp  UnusedSetRetFuncAndUsedScalarFunc.mdp
libgpdbcost/: CMakeLists.txt
libgpopt/: CMakeLists.txt
libgpopt/include/gpopt/base/: CConstraintInterval.h  CRange.h  CUtils.h
libgpopt/include/gpopt/engine/: CHint.h
libgpopt/include/gpopt/metadata/: CTableDescriptor.h
libgpopt/include/gpopt/operators/: CLogicalLimit.h  CPhysicalDML.h
libgpopt/include/gpopt/translate/: CTranslatorExprToDXL.h  CTranslatorExprToDXLUtils.h
libgpopt/include/gpopt/xforms/: CXformJoin2IndexApplyBase.h  CXformRemoveSubqDistinct.h  CXformSimplifySubquery.h
libgpopt/src/base/: CConstraint.cpp  CConstraintInterval.cpp  CDistributionSpecHashed.cpp  CRange.cpp  CUtils.cpp
libgpopt/src/metadata/: CTableDescriptor.cpp
libgpopt/src/operators/: CExpressionPreprocessor.cpp  CLogicalLimit.cpp  CLogicalSelect.cpp  CPhysical.cpp  CPhysicalDML.cpp  CPhysicalFilter.cpp  CPhysicalIndexScan.cpp  CPhysicalJoin.cpp  CPredicateUtils.cpp
libgpopt/src/search/: CGroupExpression.cpp
libgpopt/src/translate/: CTranslatorExprToDXL.cpp  CTranslatorExprToDXLUtils.cpp
libgpopt/src/xforms/: CJoinOrderDP.cpp  CXformRemoveSubqDistinct.cpp  CXformSimplifySubquery.cpp
libgpos/: CMakeLists.txt
libnaucrates/: CMakeLists.txt
libnaucrates/include/naucrates/dxl/operators/: CDXLOperator.h  CDXLOperatorFactory.h  CDXLPhysicalDML.h  CDXLScalarPartListNullTest.h  CDXLScalarPartListValues.h  dxlops.h
libnaucrates/include/naucrates/dxl/parser/: CParseHandlerFactory.h  CParseHandlerMDRelation.h  CParseHandlerPhysicalDML.h  CParseHandlerScalarPartListNullTest.h  CParseHandlerScalarPartListValues.h  parsehandlers.h
libnaucrates/include/naucrates/dxl/xml/: dxltokens.h
libnaucrates/include/naucrates/md/: CMDRelationGPDB.h  IMDRelation.h  IMDRelationCtas.h  IMDRelationExternal.h
libnaucrates/include/naucrates/traceflags/: traceflags.h
libnaucrates/src/: CDXLUtils.cpp
libnaucrates/src/md/: CMDRelationGPDB.cpp
libnaucrates/src/operators/: CDXLOperatorFactory.cpp  CDXLPhysicalDML.cpp  CDXLScalarPartListNullTest.cpp  CDXLScalarPartListValues.cpp
libnaucrates/src/parser/: CParseHandlerFactory.cpp  CParseHandlerHint.cpp  CParseHandlerMDRelation.cpp  CParseHandlerOptimizerConfig.cpp  CParseHandlerPhysicalDML.cpp  CParseHandlerScalarPartListNullTest.cpp  CParseHandlerScalarPartListValues.cpp
libnaucrates/src/xml/: dxltokens.cpp
server/: CMakeLists.txt
server/src/startup/: main.cpp
server/src/unittest/gpopt/base/: CRangeTest.cpp
server/src/unittest/gpopt/minidump/: CDMLTest.cpp  COuterJoinTest.cpp  CPartTblTest.cpp  CPhysicalParallelUnionAllTest.cpp  CPruneColumnsTest.cpp
